Few meta tags added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Coolest and Beautiful Color Changing Game by Mubaris NK">
+		<meta name="author" content="Mubaris NK">
+		<meta charset="UTF-8">
+		<meta lang="en">
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script type="text/javascript">
