Color changing for key pressing is added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</style>
 		<title>Color Changing Game</title>
 	</head>
-	<body id="bod" onkeypress="chang()">
+	<body id="bod" onkeydown="chang()">
 		<div id="main">
 			Welcome to Coolest and Beautiful <span style="color:#004687" id="ch1">Color Changing Game</span> by <span style="color:#b81a18" id="ch2">Mubaris NK</span><br />
 			<button type="button" onclick="chang()" id="but" class="btn btn-default btn-lg">
