--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 		<meta lang="en">
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 		<script type="text/javascript">
 			function chang() {
 				var arr = ['a', 'b', 'c', 'd', 'e', 'f', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
@@ -31,7 +31,7 @@
 				$("#but").css("background-color", col6);
 			}
 		</script>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 		<style type="text/css">
 			body {
 				background-color: #202020;
@@ -52,7 +52,7 @@
 	<body id="bod" onkeydown="chang()">
 		<div id="main">
 			Welcome to Coolest and Beautiful <span style="color:#004687" id="ch1">Color Changing Game</span> by <span style="color:#b81a18" id="ch2">Mubaris NK</span><br />
-			<button type="button" onclick="chang()" id="but" class="btn btn-default btn-lg">
+			<button type="button" onclick="chang()" id="but" class="waves-effect waves-light btn-large">
 				Change Color
 			</button>
 		</div>
