--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			}
 		</script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
 		<style type="text/css">
 			body {
 				background-color: #202020;
