--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			body {
 				background-color: #202020;
 				color: #ff7148;
+				font-family: 'Roboto Condensed', sans-serif;
 			}
 			#but {
 				background-color: #ec583a;
