--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				background-color: #202020;
 				color: #ff7148;
 				font-family: 'Roboto Condensed', sans-serif;
+				font-weight: 300;
 			}
 			#but {
 				background-color: #ec583a;
