--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 			}
 		</script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
 		<style type="text/css">
 			body {
 				background-color: #202020;
 				color: #ff7148;
-				font-family: 'Roboto Condensed', sans-serif;
-				font-weight: 300;
+				font-family: 'Raleway', sans-serif;
+				font-weight: 100;
 			}
 			#but {
 				background-color: #ec583a;
