--- a/index.html
+++ b/index.html
@@ -8,56 +8,23 @@
 		<meta lang="en">
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-		<script type="text/javascript">
-			function chang() {
-				var arr = ['a', 'b', 'c', 'd', 'e', 'f', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0'];
-				var a1 = arr[Math.floor(Math.random() * 16)];
-				var a2 = arr[Math.floor(Math.random() * 16)];
-				var a3 = arr[Math.floor(Math.random() * 16)];
-				var a4 = arr[Math.floor(Math.random() * 16)];
-				var a5 = arr[Math.floor(Math.random() * 16)];
-				var a6 = arr[Math.floor(Math.random() * 16)];
-				var col1 = '#' + a1 + a2 + a3 + a4 + a5 + a6;
-				var col2 = '#' + a6 + a1 + a5 + a2 + a4 + a3;
-				var col3 = '#' + a1 + a6 + a2 + a5 + a3 + a4;
-				var col4 = '#' + a2 + a5 + a3 + a4 + a6 + a1;
-				var col5 = '#' + a3 + a4 + a1 + a6 + a5 + a2;
-				var col6 = '#' + a4 + a5 + a6 + a3 + a2 + a1;
-				$("#bod").css("background-color", col1);
-				$("#main").css("color", col2);
-				$("#ch1").css("color", col3);
-				$("#ch2").css("color", col4);
-				$("#but").css("color", col5);
-				$("#but").css("background-color", col6);
-			}
-		</script>
+		<script type="text/javascript" src="js/script.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
-		<style type="text/css">
-			body {
-				background-color: #202020;
-				color: #ff7148;
-				font-family: 'Raleway', sans-serif;
-				font-weight: 100;
-			}
-			#but {
-				background-color: #ec583a;
-				color: #f5f5f5;
-				font-size: 50%;
-			}
-			#main {
-				text-align: center;
-				font-size: 500%;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style.css">
 		<title>Color Changing Game</title>
 	</head>
-	<body id="bod" onkeydown="chang()">
+	<body onload="make()">
 		<div id="main">
-			Welcome to Coolest and Beautiful <span style="color:#004687" id="ch1">Color Changing Game</span> by <span style="color:#b81a18" id="ch2">Mubaris NK</span><br />
-			<button type="button" onclick="chang()" id="but" class="waves-effect waves-light btn-large">
+			Welcome to Coolest and Beautiful <span class="purple-text">Color Changing Game</span> by <span class="green-text">Mubaris NK</span><br />
+			<button type="button" class="waves-effect waves-light btn-large" id="bt1">
 				Change Color
 			</button>
+		</div>
+		<div id="game">
+			<button class="disabled" id="req">Required Color</button>
+			<button class="disabled" id="you">Your Color</button>
+			<p id="perc"></p>
 		</div>
 	</body>
 </html>
