--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	</head>
 	<body onload="make()">
 		<div id="main">
-			Welcome to Coolest and Beautiful <span class="purple-text">Color Changing Game</span> by <span class="green-text">Mubaris NK</span><br />
+			Welcome to Coolest and Beautiful <span class="purple-text">Color Matching Tool</span> by <span class="green-text">Mubaris NK</span><br />
 			<button type="button" class="waves-effect waves-light btn-large" id="bt1">
 				Change Color
 			</button>
 		</div>
 		<div id="game">
-			<button class="disabled" id="req">Required Color</button>
-			<button class="disabled" id="you">Your Color</button>
+			<button class="btn disabled" id="req">Required Color</button>
+			<button class="btn disabled" id="you">Your Color</button>
 			<p id="perc"></p>
 		</div>
 	</body>
