--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			</button>
 		</div>
 		<div id="game">
-			<button class="btn disabled" id="req">Required Color</button>
-			<button class="btn disabled" id="you">Your Color</button>
+			<button class="btn-large" id="req">Required Color</button>
+			<button class="btn-large" id="you">Your Color</button>
 			<p id="perc"></p>
 		</div>
 	</body>
