--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 		<link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css">
-		<title>Color Changing Game</title>
+		<title>Color Matching Tool by Mubaris</title>
 	</head>
 	<body onload="make()">
 		<div id="main">
